# zenn-mem0-demo

./: .env.template  README.md  pyproject.toml
apps/: demo_001.py  mem0_chat.py
